# simple-chat

./: .gitignore  CMakeLists.txt  readme.utf-8.txt
config/: settings.cfg
include/: netmessage_struct.h
src/: CMakeLists.txt
src/client_path/: CMakeLists.txt  chatwindow.cpp  chatwindow.h  chatwindow.ui  client_path.cpp  client_path.h  client_path.qrc  loginform.cpp  netmessageconverter.cpp  netmessageconverter.h
src/configreader/: CMakeLists.txt  configreader.cpp  configreader.h
src/mainservice/: CMakeLists.txt  chatwindow.cpp  chatwindow.h  loginform.cpp  loginform.h  loginform.ui  main.cpp  mainservice.qrc  servercontroller.cpp  servercontroller.h  widget.cpp  widget.h  widget.ui
src/mainservice/qss/: coffee.qss
src/netservice/: CMakeLists.txt  asyncwork.cpp  asyncwork.h  netservice.cpp  netservice.h  safelist.h
src/server_path/: CMakeLists.txt  alivematrix.cpp  alivematrix.h  server_path.cpp  server_path.h  servercontroller.cpp  servercontroller.h  serverservice.cpp  serverservice.h
